// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge does not render opacity 1 with color faded 1`] = `
<span
  className="ax-badge ax-badge--faded"
>
  <span
    className="ax-badge__background"
    style={
      Object {
        "opacity": 0.3,
      }
    }
  />
  <span
    className="ax-badge__content"
  >
    Lorem Ipsum
  </span>
</span>
`;

exports[`Badge renders opacity 1`] = `
<span
  className="ax-badge ax-badge--success"
>
  <span
    className="ax-badge__background"
    style={
      Object {
        "opacity": 0.5,
      }
    }
  />
  <span
    className="ax-badge__content"
  >
    Lorem Ipsum
  </span>
</span>
`;

exports[`Badge renders opacity 1 1`] = `
<span
  className="ax-badge ax-badge--success ax-text--color-light"
>
  <span
    className="ax-badge__background"
    style={
      Object {
        "opacity": 1,
      }
    }
  />
  <span
    className="ax-badge__content"
  >
    Lorem Ipsum
  </span>
</span>
`;

exports[`Badge renders opacity maximum 0.3 with color faded 1`] = `
<span
  className="ax-badge ax-badge--faded"
>
  <span
    className="ax-badge__background"
    style={
      Object {
        "opacity": 0.3,
      }
    }
  />
  <span
    className="ax-badge__content"
  >
    Lorem Ipsum
  </span>
</span>
`;

exports[`Badge renders opacity maximum 0.6 1`] = `
<span
  className="ax-badge ax-badge--success"
>
  <span
    className="ax-badge__background"
    style={
      Object {
        "opacity": 0.6,
      }
    }
  />
  <span
    className="ax-badge__content"
  >
    Lorem Ipsum
  </span>
</span>
`;

exports[`Badge renders opacity minimum 0.1 1`] = `
<span
  className="ax-badge ax-badge--success"
>
  <span
    className="ax-badge__background"
    style={
      Object {
        "opacity": 0.1,
      }
    }
  />
  <span
    className="ax-badge__content"
  >
    Lorem Ipsum
  </span>
</span>
`;

exports[`Badge renders opacity minimum 0.1 with color faded 1`] = `
<span
  className="ax-badge ax-badge--faded"
>
  <span
    className="ax-badge__background"
    style={
      Object {
        "opacity": 0.1,
      }
    }
  />
  <span
    className="ax-badge__content"
  >
    Lorem Ipsum
  </span>
</span>
`;

exports[`Badge renders opacity with color faded 1`] = `
<span
  className="ax-badge ax-badge--faded"
>
  <span
    className="ax-badge__background"
    style={
      Object {
        "opacity": 0.2,
      }
    }
  />
  <span
    className="ax-badge__content"
  >
    Lorem Ipsum
  </span>
</span>
`;

exports[`Badge renders with color amber 1`] = `
<span
  className="ax-badge ax-badge--amber ax-text--color-light"
>
  <span
    className="ax-badge__background"
    style={
      Object {
        "opacity": 1,
      }
    }
  />
  <span
    className="ax-badge__content"
  >
    Lorem Ipsum
  </span>
</span>
`;

exports[`Badge renders with color blue 1`] = `
<span
  className="ax-badge ax-badge--blue ax-text--color-light"
>
  <span
    className="ax-badge__background"
    style={
      Object {
        "opacity": 1,
      }
    }
  />
  <span
    className="ax-badge__content"
  >
    Lorem Ipsum
  </span>
</span>
`;

exports[`Badge renders with color brown 1`] = `
<span
  className="ax-badge ax-badge--brown ax-text--color-light"
>
  <span
    className="ax-badge__background"
    style={
      Object {
        "opacity": 1,
      }
    }
  />
  <span
    className="ax-badge__content"
  >
    Lorem Ipsum
  </span>
</span>
`;

exports[`Badge renders with color chartreuse 1`] = `
<span
  className="ax-badge ax-badge--chartreuse ax-text--color-light"
>
  <span
    className="ax-badge__background"
    style={
      Object {
        "opacity": 1,
      }
    }
  />
  <span
    className="ax-badge__content"
  >
    Lorem Ipsum
  </span>
</span>
`;

exports[`Badge renders with color error 1`] = `
<span
  className="ax-badge ax-badge--error ax-text--color-light"
>
  <span
    className="ax-badge__background"
    style={
      Object {
        "opacity": 1,
      }
    }
  />
  <span
    className="ax-badge__content"
  >
    Lorem Ipsum
  </span>
</span>
`;

exports[`Badge renders with color faded 1`] = `
<span
  className="ax-badge ax-badge--faded"
>
  <span
    className="ax-badge__background"
    style={
      Object {
        "opacity": 0.3,
      }
    }
  />
  <span
    className="ax-badge__content"
  >
    Lorem Ipsum
  </span>
</span>
`;

exports[`Badge renders with color green 1`] = `
<span
  className="ax-badge ax-badge--green ax-text--color-light"
>
  <span
    className="ax-badge__background"
    style={
      Object {
        "opacity": 1,
      }
    }
  />
  <span
    className="ax-badge__content"
  >
    Lorem Ipsum
  </span>
</span>
`;

exports[`Badge renders with color grey 1`] = `
<span
  className="ax-badge ax-badge--grey ax-text--color-light"
>
  <span
    className="ax-badge__background"
    style={
      Object {
        "opacity": 1,
      }
    }
  />
  <span
    className="ax-badge__content"
  >
    Lorem Ipsum
  </span>
</span>
`;

exports[`Badge renders with color highlight 1`] = `
<span
  className="ax-badge ax-badge--highlight ax-text--color-light"
>
  <span
    className="ax-badge__background"
    style={
      Object {
        "opacity": 1,
      }
    }
  />
  <span
    className="ax-badge__content"
  >
    Lorem Ipsum
  </span>
</span>
`;

exports[`Badge renders with color lilac 1`] = `
<span
  className="ax-badge ax-badge--lilac ax-text--color-light"
>
  <span
    className="ax-badge__background"
    style={
      Object {
        "opacity": 1,
      }
    }
  />
  <span
    className="ax-badge__content"
  >
    Lorem Ipsum
  </span>
</span>
`;

exports[`Badge renders with color orange 1`] = `
<span
  className="ax-badge ax-badge--orange ax-text--color-light"
>
  <span
    className="ax-badge__background"
    style={
      Object {
        "opacity": 1,
      }
    }
  />
  <span
    className="ax-badge__content"
  >
    Lorem Ipsum
  </span>
</span>
`;

exports[`Badge renders with color pink 1`] = `
<span
  className="ax-badge ax-badge--pink ax-text--color-light"
>
  <span
    className="ax-badge__background"
    style={
      Object {
        "opacity": 1,
      }
    }
  />
  <span
    className="ax-badge__content"
  >
    Lorem Ipsum
  </span>
</span>
`;

exports[`Badge renders with color purple 1`] = `
<span
  className="ax-badge ax-badge--purple ax-text--color-light"
>
  <span
    className="ax-badge__background"
    style={
      Object {
        "opacity": 1,
      }
    }
  />
  <span
    className="ax-badge__content"
  >
    Lorem Ipsum
  </span>
</span>
`;

exports[`Badge renders with color rose 1`] = `
<span
  className="ax-badge ax-badge--rose ax-text--color-light"
>
  <span
    className="ax-badge__background"
    style={
      Object {
        "opacity": 1,
      }
    }
  />
  <span
    className="ax-badge__content"
  >
    Lorem Ipsum
  </span>
</span>
`;

exports[`Badge renders with color success 1`] = `
<span
  className="ax-badge ax-badge--success ax-text--color-light"
>
  <span
    className="ax-badge__background"
    style={
      Object {
        "opacity": 1,
      }
    }
  />
  <span
    className="ax-badge__content"
  >
    Lorem Ipsum
  </span>
</span>
`;

exports[`Badge renders with color teal 1`] = `
<span
  className="ax-badge ax-badge--teal ax-text--color-light"
>
  <span
    className="ax-badge__background"
    style={
      Object {
        "opacity": 1,
      }
    }
  />
  <span
    className="ax-badge__content"
  >
    Lorem Ipsum
  </span>
</span>
`;

exports[`Badge renders with defaultProps 1`] = `
<span
  className="ax-badge ax-badge--faded"
>
  <span
    className="ax-badge__background"
    style={
      Object {
        "opacity": 0.3,
      }
    }
  />
  <span
    className="ax-badge__content"
  >
    Lorem Ipsum
  </span>
</span>
`;

exports[`Badge renders with full large 1`] = `
<span
  className="ax-badge ax-badge--faded ax-badge--full--large"
>
  <span
    className="ax-badge__background"
    style={
      Object {
        "opacity": 0.3,
      }
    }
  />
  <span
    className="ax-badge__content"
  >
    Lorem Ipsum
  </span>
</span>
`;

exports[`Badge renders with full medium 1`] = `
<span
  className="ax-badge ax-badge--faded ax-badge--full--medium"
>
  <span
    className="ax-badge__background"
    style={
      Object {
        "opacity": 0.3,
      }
    }
  />
  <span
    className="ax-badge__content"
  >
    Lorem Ipsum
  </span>
</span>
`;

exports[`Badge renders with full small 1`] = `
<span
  className="ax-badge ax-badge--faded ax-badge--full--small"
>
  <span
    className="ax-badge__background"
    style={
      Object {
        "opacity": 0.3,
      }
    }
  />
  <span
    className="ax-badge__content"
  >
    Lorem Ipsum
  </span>
</span>
`;

exports[`Badge renders with full true 1`] = `
<span
  className="ax-badge ax-badge--faded ax-badge--full"
>
  <span
    className="ax-badge__background"
    style={
      Object {
        "opacity": 0.3,
      }
    }
  />
  <span
    className="ax-badge__content"
  >
    Lorem Ipsum
  </span>
</span>
`;
